Add readme & implmement footer

--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
             </div>
         </section>
 
-        <section class="section-3">
+        <section class="section-3 mb-5">
             <div class="container">
                 <div class="diamond-select-filters-mobile d-lg-none">
                     <div class="d-flex justify-content-center flex-wrap">
@@ -1264,6 +1264,9 @@
                 </div>
             </div>
         </section>
+        <footer class="footer">
+            <p class="mb-0">&copy; 2021 Steven Stone Ltd. All Right Reserved.</p>
+        </footer>
     </div>
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
