Implement comments in index.html for better description

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             </div>
         </header>
 
-        <!-- Section -->
+        <!-- Section 1 -->
         <section class="section-1 mb-5">
             <!-- Image Container -->
             <div class="image-container">
@@ -161,15 +161,18 @@
             </div>
             <!-- Product Info -->
             <div class="product-container">
+                <!-- Bread Crumb -->
                 <div class="breadcrumb text-uppercase d-none d-lg-block">
                     <span><a href="#">Home</a></span>
                     <span class="bullet-point mx-2">&#8226;</span>
                     <span><a href="#">Engagement Rings</a></span>
                 </div>
+                <!-- Product Description -->
                 <div class="product-description">
                     <h3>18k Rose Gold Classic Wedfit</h3>
                     <h2>£569.00 <span class="selling-price-text">(Selling Price)</span></h2>
                 </div>
+                <!-- Product Delivery Information -->
                 <div class="product-delivery-info d-flex align-items-center justify-content-center justify-content-lg-start my-4">
                     <img src="assets/images/product-info/vector-1.png" alt="Delivery Van">
                     <div>
@@ -177,10 +180,12 @@
                         <p>for your order to ship by Thursday, October 22.</p>
                     </div>
                 </div>
+                <!-- Product Buttons -->
                 <div class="product-buttons d-flex justify-content-center justify-content-lg-start mb-4">
                     <button class="book-a-consultation-button">Book A Consultation</button>
                     <button class="choose-a-consultation-button">Choose A Diamond</button>
                 </div>
+                <!-- Product Select Dropdowns -->
                 <div class="product-select-dropdowns d-none d-lg-flex justify-content-center justify-content-lg-start mb-4">
                     <form action="." method="get">
                         <select>
@@ -202,6 +207,7 @@
                         </select>
                     </form>
                 </div>
+                <!-- Product Spec -->
                 <div class="product-spec d-flex flex-column justify-content-center d-lg-block mb-4">
                     <nav class="mx-auto mx-lg-0">
                         <img id="chevron-left" class="chevron chevron-left" src="assets/images/chevron-left.png" alt="Chevron Left">
@@ -228,6 +234,7 @@
                         </div>
                     </div>
                 </div>
+                <!-- Product Quality -->
                 <div class="product-quality d-flex justify-content-between align-items-center">
                     <div class="w-100">
                         <div class="d-flex align-items-center">
@@ -247,17 +254,23 @@
                 </div>
             </div>
         </section>
+
+        <!-- Section 2 -->
         <section class="section-2 mb-5">
+            <!-- Down Arrow -->
             <div class="down-arrow d-none d-lg-flex justify-content-center pt-5 pb-3">
                 <img src="assets/images/arrow-1.png" alt="Arrow Down">
             </div>
+            <!-- Heading -->
             <div class="section-2-heading text-center mb-4">
                 <h1>Select A Stone</h1>
                 <h4>Choose from 30,099 diamonds and gemostones</h4>
             </div>
+            <!-- Select Stone Tab -->
             <div class="select-stone-tab">
                 <nav class="mx-auto mx-lg-0">
                     <div class="nav nav-tabs justify-content-center" id="nav-tab" role="tablist">
+                        <!-- Tab Nav Links -->
                         <a class="nav-link natural-diamond active" id="nav-natural-diamond-tab" data-bs-toggle="tab" href="#nav-natural-diamond" role="tab" aria-controls="nav-natural-diamond" aria-selected="true">
                             <div class="select-stone-image-container">
                                 <img src="assets/images/select-a-stone/natural-diamond.png" alt="Natural Diamond">
@@ -278,6 +291,7 @@
                         </a>
                     </div>
                 </nav>
+                <!-- Tab Content -->
                 <div class="tab-content mx-auto mx-lg-0" id="nav-tabContent">
                     <div class="tab-pane fade show active" id="nav-natural-diamond" role="tabpanel" aria-labelledby="nav-natural-diamond-tab">
                         <div class="container">
@@ -432,8 +446,10 @@
             </div>
         </section>
 
+        <!-- Section 3 -->
         <section class="section-3 mb-5">
             <div class="container">
+                <!-- Diamond Select Filters *Mobile* -->
                 <div class="diamond-select-filters-mobile d-lg-none">
                     <div class="d-flex justify-content-center flex-wrap">
                         <span class="d-flex align-items-center mb-2">
@@ -459,6 +475,7 @@
                         </span>
                     </div>
                 </div>
+                <!-- Diamond Select Filters *Desktop* -->
                 <div class="diamond-select-filters-desktop d-none d-lg-flex justify-content-between">
                     <div class="d-flex align-items-center">
                         <span>
@@ -492,7 +509,9 @@
                         <input type="search" placeholder="Diamond ID">
                     </div>
                 </div>
+                <!-- Diamond Select List -->
                 <div class="diamond-select-list">
+                    <!-- Diamond Select Item 1 -->
                     <div class="diamond-select-item d-flex flex-sm-column">
                         <div class="d-flex justify-content-between px-0 px-sm-2">
                             <div class="d-none d-sm-flex align-items-center mb-2">
@@ -557,6 +576,7 @@
                         </ul>
                         <button class="choose-diamond-button choose-diamond-button-desktop d-none d-sm-block">Choose Diamond</button>
                     </div>
+                    <!-- Diamond Select Item 2 -->
                     <div class="diamond-select-item d-flex flex-sm-column">
                         <div class="d-flex justify-content-between px-0 px-sm-2">
                             <div class="d-none d-sm-flex align-items-center mb-2">
@@ -621,6 +641,7 @@
                         </ul>
                         <button class="choose-diamond-button choose-diamond-button-desktop d-none d-sm-block">Choose Diamond</button>
                     </div>
+                    <!-- Diamond Select Item 3 -->
                     <div class="diamond-select-item d-flex flex-sm-column">
                         <div class="d-flex justify-content-between px-0 px-sm-2">
                             <div class="d-none d-sm-flex align-items-center mb-2">
@@ -685,6 +706,7 @@
                         </ul>
                         <button class="choose-diamond-button choose-diamond-button-desktop d-none d-sm-block">Choose Diamond</button>
                     </div>
+                    <!-- Diamond Select Item 4 -->
                     <div class="diamond-select-item d-flex flex-sm-column">
                         <div class="d-flex justify-content-between px-0 px-sm-2">
                             <div class="d-none d-sm-flex align-items-center mb-2">
@@ -749,6 +771,7 @@
                         </ul>
                         <button class="choose-diamond-button choose-diamond-button-desktop d-none d-sm-block">Choose Diamond</button>
                     </div>
+                    <!-- Diamond Select Item 5 -->
                     <div class="diamond-select-item d-flex flex-sm-column">
                         <div class="d-flex justify-content-between px-0 px-sm-2">
                             <div class="d-none d-sm-flex align-items-center mb-2">
@@ -813,6 +836,7 @@
                         </ul>
                         <button class="choose-diamond-button choose-diamond-button-desktop d-none d-sm-block">Choose Diamond</button>
                     </div>
+                    <!-- Diamond Select Item 6 -->
                     <div class="diamond-select-item d-flex flex-sm-column">
                         <div class="d-flex justify-content-between px-0 px-sm-2">
                             <div class="d-none d-sm-flex align-items-center mb-2">
@@ -877,6 +901,7 @@
                         </ul>
                         <button class="choose-diamond-button choose-diamond-button-desktop d-none d-sm-block">Choose Diamond</button>
                     </div>
+                    <!-- Diamond Select Item 7 -->
                     <div class="diamond-select-item d-flex flex-sm-column">
                         <div class="d-flex justify-content-between px-0 px-sm-2">
                             <div class="d-none d-sm-flex align-items-center mb-2">
@@ -941,6 +966,7 @@
                         </ul>
                         <button class="choose-diamond-button choose-diamond-button-desktop d-none d-sm-block">Choose Diamond</button>
                     </div>
+                    <!-- Diamond Select Item 8 -->
                     <div class="diamond-select-item d-flex flex-sm-column">
                         <div class="d-flex justify-content-between px-0 px-sm-2">
                             <div class="d-none d-sm-flex align-items-center mb-2">
@@ -1005,6 +1031,7 @@
                         </ul>
                         <button class="choose-diamond-button choose-diamond-button-desktop d-none d-sm-block">Choose Diamond</button>
                     </div>
+                    <!-- Diamond Select Item 9 -->
                     <div class="diamond-select-item d-flex flex-sm-column">
                         <div class="d-flex justify-content-between px-0 px-sm-2">
                             <div class="d-none d-sm-flex align-items-center mb-2">
@@ -1069,6 +1096,7 @@
                         </ul>
                         <button class="choose-diamond-button choose-diamond-button-desktop d-none d-sm-block">Choose Diamond</button>
                     </div>
+                    <!-- Diamond Select Item 10 -->
                     <div class="diamond-select-item d-flex flex-sm-column">
                         <div class="d-flex justify-content-between px-0 px-sm-2">
                             <div class="d-none d-sm-flex align-items-center mb-2">
@@ -1133,6 +1161,7 @@
                         </ul>
                         <button class="choose-diamond-button choose-diamond-button-desktop d-none d-sm-block">Choose Diamond</button>
                     </div>
+                    <!-- Diamond Select Item 11 -->
                     <div class="diamond-select-item d-flex flex-sm-column">
                         <div class="d-flex justify-content-between px-0 px-sm-2">
                             <div class="d-none d-sm-flex align-items-center mb-2">
@@ -1197,6 +1226,7 @@
                         </ul>
                         <button class="choose-diamond-button choose-diamond-button-desktop d-none d-sm-block">Choose Diamond</button>
                     </div>
+                    <!-- Diamond Select Item 12 -->
                     <div class="diamond-select-item d-flex flex-sm-column">
                         <div class="d-flex justify-content-between px-0 px-sm-2">
                             <div class="d-none d-sm-flex align-items-center mb-2">
@@ -1264,6 +1294,7 @@
                 </div>
             </div>
         </section>
+        <!-- Footer -->
         <footer class="footer">
             <p class="mb-0">&copy; 2021 Steven Stone Ltd. All Right Reserved.</p>
         </footer>
