--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Steven Stone</title>
-    <!-- reference your copy Font Awesome here (from our CDN or by hosting yourself) -->
+    <!-- Favicon -->
+    <link rel="icon" href="assets/images/favicon.ico" type="image/ico" sizes="16x16">
+    <!-- Font Awesome -->
     <link href="assets/font-awesome-4.7.0/css/font-awesome.css" rel="stylesheet">
     <link href="assets/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <!-- Bootstrap CSS -->
